# chunky

./: .gitignore  README.md  pyproject.toml
main/chunky/: __main__.py
main/chunky/src/: chunky_join.py  chunky_split.py
